# harmony-opcua-tablet

./: README.md  build-profile.json5  hvigorfile.js  oh-package.json5
AppScope/: app.json5
entry/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  opcua_client.cpp  opcua_client.h
entry/src/main/ets/common/: HistoryStore.ts  MockOpcUa.ts
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: Index.ets
entry/src/main/resources/base/color/: color.json
entry/src/main/resources/base/element/: string.json
